--- a/proportal/views/pages/genome_list.tt
+++ b/proportal/views/pages/genome_list.tt
@@ -1,12 +1,8 @@
-[%
-	WRAPPER layouts/default.html.tt;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: Genome List';
 %]
-
-[%	IF title %]
-<h1>[% title %]</h1>
-[%	END;
-	IF note;
+<h1>Genome List</h1>
+[%	IF note;
 		note;
 	END; %]
 [% IF page != 'genomeCart' %]
