--- a/proportal/views/inc/cart_gene_add.tt
+++ b/proportal/views/inc/cart_gene_add.tt
@@ -1,8 +1,8 @@
 <form action="[% settings.main_cgi_url %]" method="POST" class="sample-data__form">
 [% content %]
 <fieldset class="sample-data__controls" id="form_controls">
-<input type="hidden" name="section" value="GenomeCart" />
-<input type="hidden" name="page" value="genomeCart" />
+<input type="hidden" name="section" value="GeneCart" />
+<input type="hidden" name="page" value="geneCart" />
 <input class="sample-data__reset" type="reset" value="Clear selection" />
 <input class="sample-data__submit" type="submit" value="Add to cart" />
 </fieldset>
