--- a/proportal/views/pages/gene/details.tt
+++ b/proportal/views/pages/gene/details.tt
@@ -1,9 +1,8 @@
 [%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: ' _ self.display_name;
-	self = results.gene;
 %]
 
-<h2>[% self.display_name %]</h2>
+<h2>[% results.gene.display_name %]</h2>
 
 <h3>Gene Details<h3>
 [%	USE Dumper(Indent = 1);
