--- a/proportal/views/inc/title/gene.tt
+++ b/proportal/views/inc/title/gene.tt
@@ -4,7 +4,7 @@
 	ELSE;
 		surtitle = self.locus_type;
 	END;
-	title = self.gene_display_name;
+	article_title = self.gene_display_name;
 	subtitle = 'from ' _ taxon_name_link( x = {}, obj = self );
 
 	button = {
